# proekt

gallows_game-main/: CMakeLists.txt  README.md  main.cpp  test.cpp  word.h
